yaml/HPL.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-openshift-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: html-openshift-app
    spec:
      containers:
        - name: html-openshift-app
          image: 'image-registry.openshift-image-registry.svc:5000/254196-zlic-mborner1/html-openshift-app@sha256:03f946588ad3b63fbf3019dd1d0276cbe291e2f3d7cc6c11bbe7b187c939afea'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
