yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-app-frontend
  namespace: 254196-zlic-mborner1
  labels:
    app: petclinic-app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-app-frontend
  template:
    metadata:
      labels:
        app: petclinic-app-frontend
    spec:
      containers:
        - name: petclinic-app-frontend
          image: ghcr.io/mibo200/html-openshift-app:v1
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 600m
              memory: 768Mi
            requests:
              cpu: 10m
              memory: 100Mi
              ephemeral-storage: 100Ki
          securityContext:
            runAsNonRoot: true
            runAsUser: 1002270000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      restartPolicy: Always
      serviceAccountName: default
      imagePullSecrets:
        - name: default-dockercfg-zbfcl
      nodeSelector:
        node-role.kubernetes.io/app: ''
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 300
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 300
        - key: node.kubernetes.io/memory-pressure
          operator: Exists
          effect: NoSchedule
