yaml/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: html-openshift-app
  labels:
    app: html-openshift-app
    app.kubernetes.io/part-of: html-openshift-app
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: html-openshift-app
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-app-mysql
spec:
  selector:
    app: petclinic-app-mysql
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-app-phpmyadmin
spec:
  selector:
    app: petclinic-app-phpmyadmin
  ports:
    - port: 8080
      targetPort: 8080
