yaml/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: html-openshift-app
  labels:
    app: html-openshift-app
    app.kubernetes.io/part-of: html-openshift-app
spec:
  to:
    kind: Service
    name: petclinic-app-phpmyadmin   
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
